postgres.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: dex-postgres
  namespace: dex
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
          - image: postgres
            name: dex-postgres
            ports:
            - containerPort: 5432
              name: postgres-port
            volumeMounts:
              - name: dex-postgres
                mountPath: /var/lib/postgresql/data
      volumes:
        - name: dex-postgres
          persistentVolumeClaim:
            claimName: dex-postgres

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: dex-postgres
  namespace: dex
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
